feat: creating route to get publisher by ID
