# src/modules/publishers/publisher.routes.ts
@@ -1,6 +1,7 @@
 import { Router } from "express";
 import { createPublisherController } from './domain/useCases/createPublisher';
 import { listAllPublishersController } from './domain/useCases/listAllPublishers';
+import { findPublisherByIdController } from './domain/useCases/findPublisherById';
 
 const publisherRoutes = Router();
 
@@ -10,6 +11,10 @@ publisherRoutes.post("/", (req, res) => {
 
 publisherRoutes.get("/", (req, res) => {
   return listAllPublishersController.handle(req, res);
+});
+
+publisherRoutes.get("/:id", (req, res) => {
+  return findPublisherByIdController.handle(req, res);
 });
 
 export { publisherRoutes };
